--- a/index.html
+++ b/index.html
@@ -1,18 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Website</title>
+    <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi accusamus totam veniam quis molestiae ad eum similique doloribus blanditiis reprehenderit odit aut architecto repellat eveniet suscipit minima nulla, magni voluptates rerum? Voluptatum tempora labore laudantium ipsum doloribus reprehenderit harum aperiam nisi maiores eum hic, magnam facere, amet ut. Ipsa, libero.
+    <header class="header">
+        <div class="wrapper">
+
+            <div class="header__wrapper">
+
+                <div class="wrapper__logo">
+                    <a href="/" class="wrapper__logo-link">
+                        <img src="./image/logo-znu-01.png" alt="logo" class="wrapper__logo-pic">
+                    </a>
+                </div>
+
+                <nav class="header__nav">
+                    <ul class="header__list-menu">
+                        <li class="header__item">
+                            <a href="./index.html" class="header__link">Головна</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="./news.html" class="header__link">Новини</a>
+                        </li>
+                         <li class="header__item">
+                            <a href="./education.html" class="header__link">Навчання</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="./contacts.html" class="header__link">Контакти</a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
         </div>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur voluptatum inventore nostrum maiores et, iusto totam. Officia, asperiores totam hic expedita exercitationem cum perspiciatis laboriosam!</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus fuga porro saepe reprehenderit impedit amet iusto, nam dolores sed, ipsam voluptas earum sunt officiis commodi?</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora aspernatur nisi sunt dolor natus quia hic vel fuga. Perspiciatis laudantium distinctio consectetur tempora dolorum vero pariatur autem! Quis neque consectetur porro ad aliquam ipsum eaque.</p>
+    </header>
+
+    <main class="main">
+        <section class="intro">
+            <div class="wrapper">
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsam commodi error impedit facilis
+                    aut
+                    mollitia, ab ipsum vero quia aliquam illum minima placeat vel animi perspiciatis. Mollitia,
+                    asperiores
+                    beatae quas expedita deserunt, adipisci cum corrupti quasi ratione nulla iste, natus ex voluptas
+                    eum.
+                    Eaque possimus, rerum facilis adipisci natus fuga molestias reprehenderit quaerat deleniti illo
+                    accusamus nemo est beatae rem aut, corrupti vel fugit illum laboriosam soluta iusto repellendus
+                    officia
+                    modi! Ducimus quos, illo dolores aperiam expedita necessitatibus eaque dolorem nisi natus
+                    doloremque, ea
+                    recusandae veritatis ex, impedit dicta corrupti tempora aspernatur dolorum illum quam minus sunt?
+                    Cum
+                    quam saepe, recusandae nemo repellat adipisci maxime consectetur fuga a illum assumenda vitae
+                    eveniet
+                    commodi quod! Quasi totam voluptate enim ratione perspiciatis illum, aperiam aspernatur inventore
+                    libero
+                    quaerat corporis cum recusandae. Nisi error est rerum vitae magni nobis at maxime deserunt rem.
+                    Asperiores officiis non architecto velit quae dolor quasi debitis? Deleniti sunt quibusdam inventore
+                    sit
+                    veniam iure beatae aperiam aut deserunt sequi! Facilis debitis qui beatae dolore, molestiae
+                    exercitationem cupiditate reiciendis natus explicabo quo harum eos labore possimus commodi mollitia
+                    quisquam molestias, voluptatum ipsa aliquam aut odit ut?
+                <p>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__item">
+                <div class="footer__logo">
+                    <img src="./image/logo-footer.png" alt="footer__logo-pic" class="footer__logo-pic">
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
 </body>
+
 </html>
